--- a/src/components/Filters/CompanyFilter/CompaniesList/CompaniesList.module.scss
+++ b/src/components/Filters/CompanyFilter/CompaniesList/CompaniesList.module.scss
@@ -48,42 +48,59 @@
 .list {
   max-height: 200px;
   overflow: auto;
+  padding-right: 20px;
 }
 
 .item {
   display: flex;
-  align-items: center;
+
   gap: 12px;
-  padding-right: 20px;
-  margin-right: 20px;
-  height: 50px;
+  padding: 6px 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
   cursor: pointer;
+  overflow: hidden;
+}
+.check {
+  padding-top: 4px;
 }
 
 .block {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
 
   p {
-    width: 100%;
-    text-wrap: nowrap;
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    margin: 0;
   }
 
   span {
     color: #71869d;
   }
 }
+.blockDetails {
+  max-width: 80%;
+}
 
 .buttons {
-  width: calc(100% - 20px);
+  width: 100%;
   display: flex;
   align-items: center;
   gap: 12px;
-  margin-right: 20px;
+
+  padding-right: 20px;
+}
+.ogrnLine {
+  display: block;
+  margin-top: 2px;
+  color: #71869d;
+  font-size: 14px;
 }
