--- a/src/components/Filters/DetailsFilter/DetailsFilter.module.scss
+++ b/src/components/Filters/DetailsFilter/DetailsFilter.module.scss
@@ -61,6 +61,7 @@
 .list {
   display: flex;
   flex-direction: column;
+  padding-right: 20px;
   span {
     color: #71869d;
     font-size: 14px;
@@ -88,14 +89,27 @@
 }
 
 .block {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
 }
-
+.blockDetails {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  flex-grow: 1;
+}
 .buttons {
   margin-left: 20px;
-  margin-top: 20px;
+  margin-top: 18px;
   display: flex;
   gap: 12px;
   width: 100%;
+}
+.ogrnLine {
+  display: block;
+
+  color: #71869d;
+  font-size: 14px;
 }
