--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -18,3 +18,8 @@
   display: flex;
   justify-content: space-between;
 }
+.container {
+  height: auto;
+  overflow: visible;
+  overflow-y: auto;
+}
