--- a/src/components/Information/Information.module.scss
+++ b/src/components/Information/Information.module.scss
@@ -4,10 +4,12 @@
   overflow: hidden;
   transition: all 0.2s;
   opacity: 0;
+  margin-top: 0;
 
   &_open {
     opacity: 1;
     height: 64px;
+    margin-top: 20px;
   }
 }
 
