--- a/src/components/General/DownloadButton/DownloadButton.module.scss
+++ b/src/components/General/DownloadButton/DownloadButton.module.scss
@@ -5,9 +5,11 @@
   border: none;
   background: none;
   cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
-  color: #0047ff;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  color: #002cfb;
   text-decoration: none;
 
   &:hover {
@@ -16,8 +18,8 @@
 }
 
 .icon {
-  width: 24px;
-  height: 24px;
+  width: 16px;
+  height: 16px;
   margin-right: 4px;
 }
 
