--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,7 +1,7 @@
 .root {
   table-layout: fixed;
   width: 100%;
-  padding: 0 28px 20px 28px;
+  padding: 0 0 20px 0;
   width: 100%;
   max-width: 100%;
   background-color: #fff;
@@ -17,8 +17,9 @@
   display: grid;
   align-items: center;
   padding: 0 20px;
+  margin-top: -1px;
   height: 50px;
-  border-bottom: 1px solid #eff4fb;
+ /*  border-bottom: 1px solid #eff4fb; */
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
@@ -73,6 +74,14 @@
     }
   }
 }
+
+.line {
+  margin: -1px 20px 0;
+  width: calc(100% - 40px);
+  height: 1px;
+  background-color: #EAF0FA;
+}
+
 .gridCell {
   overflow: hidden;
   white-space: nowrap;
