--- a/src/components/General/CompanyLabelBadge/CompanyLabelBadge.module.scss
+++ b/src/components/General/CompanyLabelBadge/CompanyLabelBadge.module.scss
@@ -1,6 +1,6 @@
 .badge {
   flex-shrink: 0;
-  max-width: 90px;
+ /*  max-width: 90px; */
   overflow: hidden;
   display: inline-flex;
   align-items: center;
