--- a/src/components/Filters/CompanyFilter/CompaniesList/CompaniesList.module.scss
+++ b/src/components/Filters/CompanyFilter/CompaniesList/CompaniesList.module.scss
@@ -62,12 +62,13 @@
   cursor: pointer;
   overflow: hidden;
 }
+
 .check {
   padding-top: 4px;
 }
 
 .block {
-  width: 100%;
+  width: calc(100% - 28px);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -86,10 +87,31 @@
     color: #71869d;
   }
 }
+
 .blockDetails {
-  max-width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
+
+  p {
+    flex-shrink: 20;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  span {
+    text-wrap: nowrap;
+  }
+
+}
+
+.name {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 6px;
 }
 
 .buttons {
@@ -100,6 +122,7 @@
 
   padding-right: 20px;
 }
+
 .ogrnLine {
   display: block;
   margin-top: 2px;
