--- a/src/components/General/Dropdown/Dropdown.module.scss
+++ b/src/components/General/Dropdown/Dropdown.module.scss
@@ -5,7 +5,7 @@
 .selectBox {
   height: 40px;
   border: 1px solid rgba(216, 228, 251, 0.55);
-
+  
   padding: 10px 40px 10px 12px;
   border-radius: 4px;
   background-color: #fff;
@@ -25,13 +25,18 @@
   font-weight: 400;
   line-height: 14px;
 
-  &:hover {
+ /*  &:hover {
     border-color: #002cfb;
   }
 
   &:focus {
     border-color: #002cfb;
     outline: none;
+  } */
+   cursor: default;
+
+  svg {
+    display: none;
   }
 }
 .selectBox .value {
