--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,7 +1,8 @@
 .root {
   table-layout: fixed;
   width: 100%;
-  padding: 0 0 20px 0;
+ /*  padding: 0 0 20px 0; */
+ overflow: hidden;
   width: 100%;
   max-width: 100%;
   background-color: #fff;
@@ -9,6 +10,11 @@
   border-spacing: 0;
   opacity: 1;
   color: var(--Text-Primary, #121922);
+  transition: all 0.15s;
+
+  &_anim {
+    opacity: 1;
+  }
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -83,10 +89,9 @@
 }
 
 .gridCell {
-  overflow: hidden;
+  padding-right: 12px;
   white-space: nowrap;
   text-overflow: ellipsis;
-  padding: 16px 20px 16px 0;
 
   &.right {
     justify-self: end;
@@ -107,7 +112,7 @@
 
 .gridHeader {
   @extend .gridRow;
-  font-weight: 500;
+  font-weight: 400;
   color: #71869d;
 
   &:hover {
