--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-/* @import './vendors/normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap'); */
+@import './vendors/normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 #root_bank {
 
