--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
-/* @import './vendors/normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap'); */
+@import './vendors/normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 #root_bank {
-
 }
 
 .tippy-box {
