--- a/src/components/General/Combobox/Combobox.module.scss
+++ b/src/components/General/Combobox/Combobox.module.scss
@@ -5,14 +5,18 @@
   align-items: center;
   justify-content: space-between;
   gap: 20px;
+  max-width: 100%;
+  overflow: hidden;
 
   &.focused {
     background-color: #f0f4ff;
   }
 
   .companyInfo {
-    flex-shrink: 0;
-    width: 400px;
+    flex: 1 1 auto;
+    min-width: 0;
+    font-family: Inter;
+    overflow: hidden;
 
     .companyName {
       margin-bottom: 4px;
@@ -28,6 +32,9 @@
     .companyDetails {
       color: #6a7b92;
       font-size: 12px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
@@ -83,6 +90,9 @@
   font-weight: 400;
   line-height: 18px;
   max-width: 150px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
   .badgeText {
     overflow: hidden;
