--- a/src/components/General/CustomToast/CustomToast.module.scss
+++ b/src/components/General/CustomToast/CustomToast.module.scss
@@ -1,61 +1,76 @@
-.root {
-  z-index: 1002;
-  top: 20px;
-  left: 40%;
-  width: 582px;
-  display: flex;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  &_anim {
-    visibility: visible;
-  }
-}
-
 .notification {
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  height: 48px;
-  border-radius: 4px;
-  background: #fff;
-  box-shadow: 4px 4px 16px 0px rgba(0, 0, 0, 0.1);
-  padding: 8px 12px 8px 8px;
-  opacity: 1;
-  transition: opacity 0.15s ease-in-out;
+    display: flex;
+    align-items: center;
 
-  p {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 14px;
-    color: #121922;
-  }
+    gap: 10px;
+    border-radius: 4px;
+    background: #fff;
+    box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.1);
+    padding: 10px 12px;
+    opacity: 1;
+    transition: opacity 0.15s ease-in-out;
+
+    p {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 18px;
+        color: #121922;
+    }
 }
 
-.line {
-  height: 100%;
-  border-radius: 24px;
-  width: 3px;
-  background-color: #002cfb;
-  flex-shrink: 0;
-  margin-right: 8px;
+.notification_error {
+    width: max-content;
+    max-width: 600px;
+    max-height: 76px;
+    border-left: 2px solid #ff2d2d;
 }
+
+.notification_success {
+    width: max-content;
+    max-width: 600px;
+    max-height: 76px;
+    border-left: 2px solid #002cfb;
+}
+
+// .line {
+//     height: 100%;
+//     border-radius: 24px;
+//     width: 3px;
+//     background-color: #002cfb;
+
+//     flex-shrink: 0;
+//     margin-right: 8px;
+// }
+
+// .lineError {
+//     background-color: #ff2d2d !important;
+// }
 
 .icon {
-  path {
-    fill: #002cfb;
-  }
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    flex-shrink: 0;
+    // path {
+    //   fill: #002cfb;
+    // }
 }
 
 .close {
-  margin-left: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: all 0.15s;
+    margin-left: auto;
+    padding-top: 4px;
+    height: 100%;
+    display: flex;
+    /*   align-items: center; */
+    align-self: start;
+    justify-content: center;
+    cursor: pointer;
+    transition: opacity 0.15s;
+    background: transparent;
+    border: none;
 
-  &:hover {
-    opacity: 0.8;
-  }
+    &:hover {
+        opacity: 0.8;
+    }
 }
