feat: вкладка банковские счета

--- a/src/components/ModalManager/modals/AccountInfo/AccountInfo.module.scss
+++ b/src/components/ModalManager/modals/AccountInfo/AccountInfo.module.scss
@@ -46,15 +46,6 @@
   border-radius: 8px;
 }
 
-.paymentDetails {
-  font-family: Arial, sans-serif;
-  background: #f9fbfd;
-  border-radius: 8px;
-  max-width: 800px;
-  font-size: 14px;
-  color: #2c3e50;
-}
-
 .sectionHeader {
   display: grid;
   grid-template-columns: 120px 1fr;
@@ -152,7 +143,8 @@
 
 .controlSection {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 12px;
 }
 .controlBtn {
   overflow: hidden;
@@ -224,13 +216,80 @@
   color: #002cfb;
   font-weight: 500;
   text-decoration: none;
-  height: 0;
-  opacity: 0;
-  overflow: hidden;
-  transition: all 0.3s ease;
+  height: 40px;
+  // height: 0;
+  // opacity: 0;
+  // overflow: hidden;
+  // transition: all 0.3s ease;
 
-  &_vis {
-    height: auto;
-    opacity: 1;
-  }
+  // &_vis {
+  //   height: auto;
+  //   opacity: 1;
+  // }
+}
+.paymentDetails {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.grid {
+  display: grid;
+  gap: 12px;
+}
+
+.gridRow {
+  display: grid;
+  grid-template-columns: 120px 1fr;
+  gap: 12px;
+}
+
+.label {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  color: #71869d;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+}
+
+.content {
+  display: flex;
+  align-items: flex-start;
+  font-size: 14px;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+}
+
+.payer {
+  color: #121922;
+}
+
+.receiver {
+  color: #1a73e8;
+}
+
+.paymentSummary {
+  padding: 16px;
+  background: #f7f8fa;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.sectionSubtitle {
+  font-weight: 600;
+  margin-bottom: 6px;
+}
+
+.summaryRow {
+  display: grid;
+  grid-template-columns: 220px 1fr;
+  gap: 12px;
+  align-items: center;
 }
